--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,42 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+
   assets:
-    - TargaryenCoin.json
+
+    # images
+    - assets/images/ic_logo.png
+    - assets/images/ic_default_user_avatar.png
+    - assets/images/ic_default_wallet_avatar_0.png
+    - assets/images/ic_default_wallet_avatar_1.png
+    - assets/images/ic_default_wallet_avatar_2.png
+    - assets/images/ic_default_wallet_avatar_3.png
+    - assets/images/ic_default_wallet_avatar_4.png
+    - assets/images/ic_default_wallet_avatar_5.png
+    - assets/images/ic_default_wallet_avatar_6.png
+    - assets/images/ic_default_wallet_avatar_7.png
+    - assets/images/ic_default_wallet_avatar_8.png
+    - assets/images/ic_default_wallet_avatar_9.png
+    - assets/images/ic_default_wallet_avatar_10.png
+    - assets/images/ic_gas_price_fast.png
+    - assets/images/ic_gas_price_slow.png
+    - assets/images/ic_qrcode_scan.png
+    - assets/images/ic_qrcode.png
+    - assets/images/ic_transfer_arp_b.png
+    - assets/images/ic_transfer_bat_b.png
+    - assets/images/ic_transfer_bnt_b.png
+    - assets/images/ic_transfer_eos_b.png
+    - assets/images/ic_transfer_eth_b.png
+    - assets/images/ic_transfer_every_b.png
+    - assets/images/ic_transfer_iost_b.png
+    - assets/images/ic_transfer_knc_b.png
+    - assets/images/ic_transfer_lrc_b.png
+    - assets/images/ic_transfer_rdn_b.png
+    - assets/images/ic_transfer_req_b.png
+    - assets/images/ic_transfer_rhoc_b.png
+    - assets/images/ic_transfer_vite_b.png
+    - assets/images/ic_transfer_weth_b.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
