--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
+    - TargaryenCoin.json
 
     # images
     - assets/images/ic_logo.png
