--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="etherwallet"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <meta-data android:name="io.flutter.network-policy"
+            android:resource="@xml/network_security_config"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
