--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_redux: ^0.5.2
   font_awesome_flutter: ^8.2.0
   web3dart: ^1.2.3
+  optional: '5.0.0'
   starcoin_wallet:
     #git:
     #  url: git://github.com/starcoinorg/starcoin.dart
