--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = etherwallet
+PRODUCT_NAME = StarcoinWallet
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = dev.clempe.etherwallet
+PRODUCT_BUNDLE_IDENTIFIER = dev.clempe.stcerwallet
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2020 dev.clempe. All rights reserved.
