--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,17 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>wallet.starcoin.org</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>stc</string>
+			</array>
+		</dict>
+	</array>
+
 </dict>
 </plist>
