--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   web3dart: ^1.2.3
   optional: '5.0.0'
   webview_flutter: 1.0.7
+  sqflite: ^1.3.0
+  path: 1.8.0-nullsafety.3
+  flutter_slidable: 0.5.7
   starcoin_wallet:
     #git:
     #  url: git://github.com/starcoinorg/starcoin.dart
