--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,9 @@ dependencies:
   flutter_slidable: 0.5.7
   encrypt: 4.0.3
   starcoin_wallet:
-    #git:
-    #  url: git://github.com/starcoinorg/starcoin.dart
-    path: /Users/fanngyuan/Documents/workspace/starcoin_wallet.dart
+    git:
+      url: git://github.com/starcoinorg/starcoin.dart
+    # path: /Users/fanngyuan/Documents/workspace/starcoin_wallet.dart
 
 dev_dependencies:
   flutter_test:
