--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  provider: ^3.1.0+1
+  provider: 4.3.3
   qr_flutter: ^3.2.0
   bip39: ^1.0.3
   tweetnacl: ^0.3.1
@@ -40,7 +40,7 @@ dependencies:
   flutter_hooks: ^0.9.0
   built_value: ^7.1.0
   built_collection: ^4.3.2
-  flutter_redux: ^0.5.2
+  flutter_redux: ^0.7.0
   font_awesome_flutter: ^8.2.0
   web3dart: ^1.2.3
   optional: '5.0.0'
@@ -50,9 +50,9 @@ dependencies:
   flutter_slidable: 0.5.7
   encrypt: 4.0.3
   starcoin_wallet:
-    git:
-      url: git://github.com/starcoinorg/starcoin.dart
-    # path: /Users/fanngyuan/Documents/workspace/starcoin_wallet.dart
+    #git:
+    #  url: git://github.com/starcoinorg/starcoin.dart
+    path: /Users/fanngyuan/Documents/workspace/starcoin_wallet.dart
 
 dev_dependencies:
   flutter_test:
